--- a/client/package.json
+++ b/client/package.json
@@ -6,26 +6,33 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.58.5",
-    "@react-three/fiber": "^8.12.0",
-    "framer-motion": "^10.9.4",
-    "maath": "^0.5.3",
-    "react": "^18.2.0",
+    "@react-three/drei": "^9.115.0",
+    "@react-three/fiber": "^8.17.10",
+    "autoprefixer": "^10.4.20",
+    "framer-motion": "^11.11.11",
+    "maath": "^0.10.8",
+    "react": "^18.3.1",
     "react-color": "^2.19.3",
-    "react-dom": "^18.2.0",
-    "three": "^0.150.1",
-    "valtio": "^1.10.3"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.14",
+    "three": "^0.170.0",
+    "three-mesh-bvh": "^0.8.0",
+    "valtio": "^2.1.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.0",
-    "vite": "^4.2.0"
+    "@eslint/js": "^9.13.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.11.0",
+    "vite": "^5.4.10"
   }
 }
